# ucheba_dz

./: README.md  pyproject.toml
src/: masks.py  widget.py
tests/: test_masks.py  test_widget.py
